packages/fb_connector/lib/src/ffi/fb_bindings.dart


  late final _isc_decode_datePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ISC_QUAD>,
              ffi.Pointer<ffi.Void>)>>('isc_decode_date');
  late final _isc_decode_date = _isc_decode_datePtr.asFunction<
      void Function(ffi.Pointer<ISC_QUAD>, ffi.Pointer<ffi.Void>)>();

  void isc_decode_sql_date(
    ffi.Pointer<ISC_DATE> arg0,
    ffi.Pointer<ffi.Void> arg1,
  ) {
    return _isc_decode_sql_date(
      arg0,
      arg1,
    );
  }

  late final _isc_decode_sql_datePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ISC_DATE>,
              ffi.Pointer<ffi.Void>)>>('isc_decode_sql_date');
  late final _isc_decode_sql_date = _isc_decode_sql_datePtr.asFunction<
      void Function(ffi.Pointer<ISC_DATE>, ffi.Pointer<ffi.Void>)>();

  void isc_decode_sql_time(
    ffi.Pointer<ISC_TIME> arg0,
    ffi.Pointer<ffi.Void> arg1,
  ) {
    return _isc_decode_sql_time(
      arg0,
      arg1,
    );
  }

  late final _isc_decode_sql_timePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ISC_TIME>,
              ffi.Pointer<ffi.Void>)>>('isc_decode_sql_time');
  late final _isc_decode_sql_time = _isc_decode_sql_timePtr.asFunction<
      void Function(ffi.Pointer<ISC_TIME>, ffi.Pointer<ffi.Void>)>();

  void isc_decode_timestamp(
    ffi.Pointer<ISC_TIMESTAMP> arg0,
    ffi.Pointer<ffi.Void> arg1,
  ) {
    return _isc_decode_timestamp(
      arg0,
      arg1,
    );
  }

  late final _isc_decode_timestampPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ISC_TIMESTAMP>,
              ffi.Pointer<ffi.Void>)>>('isc_decode_timestamp');
  late final _isc_decode_timestamp = _isc_decode_timestampPtr.asFunction<
      void Function(ffi.Pointer<ISC_TIMESTAMP>, ffi.Pointer<ffi.Void>)>();

  int isc_detach_database(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
  ) {
    return _isc_detach_database(
      arg0,
      arg1,
    );
  }

  late final _isc_detach_databasePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>)>>('isc_detach_database');
  late final _isc_detach_database = _isc_detach_databasePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_db_handle>)>();

  int isc_drop_database(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
  ) {
    return _isc_drop_database(
      arg0,
      arg1,
    );
  }

  late final _isc_drop_databasePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>)>>('isc_drop_database');
  late final _isc_drop_database = _isc_drop_databasePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_db_handle>)>();

  int isc_dsql_allocate_statement(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_stmt_handle> arg2,
  ) {
    return _isc_dsql_allocate_statement(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_dsql_allocate_statementPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_stmt_handle>)>>('isc_dsql_allocate_statement');
  late final _isc_dsql_allocate_statement =
      _isc_dsql_allocate_statementPtr.asFunction<
          int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_stmt_handle>)>();

  int isc_dsql_alloc_statement2(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_stmt_handle> arg2,
  ) {
    return _isc_dsql_alloc_statement2(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_dsql_alloc_statement2Ptr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_stmt_handle>)>>('isc_dsql_alloc_statement2');
  late final _isc_dsql_alloc_statement2 =
      _isc_dsql_alloc_statement2Ptr.asFunction<
          int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_stmt_handle>)>();

  int isc_dsql_describe(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_stmt_handle> arg1,
    int arg2,
    ffi.Pointer<XSQLDA> arg3,
  ) {
    return _isc_dsql_describe(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_dsql_describePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>)>>('isc_dsql_describe');
  late final _isc_dsql_describe = _isc_dsql_describePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_stmt_handle>, int,
          ffi.Pointer<XSQLDA>)>();

  int isc_dsql_describe_bind(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_stmt_handle> arg1,
    int arg2,
    ffi.Pointer<XSQLDA> arg3,
  ) {
    return _isc_dsql_describe_bind(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_dsql_describe_bindPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>)>>('isc_dsql_describe_bind');
  late final _isc_dsql_describe_bind = _isc_dsql_describe_bindPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_stmt_handle>, int,
          ffi.Pointer<XSQLDA>)>();

  int isc_dsql_exec_immed2(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
    int arg5,
    ffi.Pointer<XSQLDA> arg6,
    ffi.Pointer<XSQLDA> arg7,
  ) {
    return _isc_dsql_exec_immed2(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
      arg7,
    );
  }

  late final _isc_dsql_exec_immed2Ptr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>,
              ffi.Pointer<XSQLDA>)>>('isc_dsql_exec_immed2');
  late final _isc_dsql_exec_immed2 = _isc_dsql_exec_immed2Ptr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<XSQLDA>,
          ffi.Pointer<XSQLDA>)>();

  int isc_dsql_execute(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    ffi.Pointer<isc_stmt_handle> arg2,
    int arg3,
    ffi.Pointer<XSQLDA> arg4,
  ) {
    return _isc_dsql_execute(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_dsql_executePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>)>>('isc_dsql_execute');
  late final _isc_dsql_execute = _isc_dsql_executePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<isc_stmt_handle>, int, ffi.Pointer<XSQLDA>)>();

  int isc_dsql_execute2(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    ffi.Pointer<isc_stmt_handle> arg2,
    int arg3,
    ffi.Pointer<XSQLDA> arg4,
    ffi.Pointer<XSQLDA> arg5,
  ) {
    return _isc_dsql_execute2(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
    );
  }

  late final _isc_dsql_execute2Ptr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>,
              ffi.Pointer<XSQLDA>)>>('isc_dsql_execute2');
  late final _isc_dsql_execute2 = _isc_dsql_execute2Ptr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<isc_stmt_handle>,
          int,
          ffi.Pointer<XSQLDA>,
          ffi.Pointer<XSQLDA>)>();

  int isc_dsql_execute_immediate(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
    int arg5,
    ffi.Pointer<XSQLDA> arg6,
  ) {
    return _isc_dsql_execute_immediate(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_dsql_execute_immediatePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>)>>('isc_dsql_execute_immediate');
  late final _isc_dsql_execute_immediate =
      _isc_dsql_execute_immediatePtr.asFunction<
          int Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              int,
              ffi.Pointer<ISC_SCHAR>,
              int,
              ffi.Pointer<XSQLDA>)>();

  int isc_dsql_fetch(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_stmt_handle> arg1,
    int arg2,
    ffi.Pointer<XSQLDA> arg3,
  ) {
    return _isc_dsql_fetch(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_dsql_fetchPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>)>>('isc_dsql_fetch');
  late final _isc_dsql_fetch = _isc_dsql_fetchPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_stmt_handle>, int,
          ffi.Pointer<XSQLDA>)>();

  int isc_dsql_finish(
    ffi.Pointer<isc_db_handle> arg0,
  ) {
    return _isc_dsql_finish(
      arg0,
    );
  }

  late final _isc_dsql_finishPtr = _lookup<
          ffi.NativeFunction<ISC_STATUS Function(ffi.Pointer<isc_db_handle>)>>(
      'isc_dsql_finish');
  late final _isc_dsql_finish = _isc_dsql_finishPtr
      .asFunction<int Function(ffi.Pointer<isc_db_handle>)>();

  int isc_dsql_free_statement(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_stmt_handle> arg1,
    int arg2,
  ) {
    return _isc_dsql_free_statement(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_dsql_free_statementPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16)>>('isc_dsql_free_statement');
  late final _isc_dsql_free_statement = _isc_dsql_free_statementPtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_stmt_handle>, int)>();

  int isc_dsql_insert(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_stmt_handle> arg1,
    int arg2,
    ffi.Pointer<XSQLDA> arg3,
  ) {
    return _isc_dsql_insert(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }
